<resources>
    <string name="app_name">MapsandBroadcast</string>
    <string name="location_out">You are are accessing a space out of the earth bounds.</string>
    <string name="button_navigate">Navigate</string>
    <string name="text_latitude">Latitude</string>
    <string name="text_longitude">Longitude</string>
    <string name="text_location">Location</string>


    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in_google">Google Sign In</string>


    <string name="edit_text_user">Email or ID</string>
    <string name="edit_text_pass">Password</string>
    <string name="btn_login">Login</string>
    <string name="text_view_or">OR</string>
    <string name="btn_create_user">Sign Up</string>

    <string name="act_maps_location_list">List of Locations</string>
    <string name="act_google_maps"> Google Maps</string>
    <string name="act_location_details"> Location Details</string>
    <string name="act_login">Login / SignUp</string>

    <string name="auth_failed">Authentication:success</string>
    <string name="sign_in_success">signInWithEmail:success</string>
    <string name="sign_up_success">createUserWithEmailAndPassword:failure</string>
    <string name="sign_in_fail">signInWithEmail:failure</string>
    <string name="sign_up_fail">createUserWithEmailAndPassword:failure</string>

    <string name="txt_view_city">City: </string>
    <string name="txt_view_address">Address: </string>
    <string name="text_view_zip"> ZIP: </string>
    <string name="text_view_latlng"> Coordinates: </string>

    <string name="button_send_intent">Send Broadcast</string>

</resources>
